If the user was listing the details of a zone that did not exist, all kinds of error messages were given. Now we first determine if the ID is valid and if not, immediately return the correct error message.

--- a/locale/nl_NL/LC_MESSAGES/nl.po
+++ b/locale/nl_NL/LC_MESSAGES/nl.po
@@ -16,6 +16,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "There is no zone with this ID."
+msgstr "Er bestaat geen zone met dit ID."
+
 #: add_perm_templ.php:35 list_perm_templ.php:60
 msgid "Add permission template"
 msgstr "Permissie template toevoegen"
