--- a/docs/i18n-template-php.pot
+++ b/docs/i18n-template-php.pot
@@ -16,6 +16,9 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "There is no zone with this ID."
+msgstr ""
+
 #: add_perm_templ.php:35 list_perm_templ.php:60
 msgid "Add permission template"
 msgstr ""
