Added a check for the existence of the install/ direcory. If it exists, present the user with an error message.

--- a/docs/i18n-template-php.pot
+++ b/docs/i18n-template-php.pot
@@ -16,6 +16,9 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+msgid "The install/ directory exists, you must remove it first before proceeding."
+msgstr ""
+
 msgid "There is no zone with this ID."
 msgstr ""
 
