--- a/locale/nl_NL/LC_MESSAGES/nl.po
+++ b/locale/nl_NL/LC_MESSAGES/nl.po
@@ -375,8 +375,8 @@ msgid "Query"
 msgstr "Zoekopdracht"
 
 #: search.php:124
-msgid "Enter a hostname or IP address"
-msgstr "Geef een hostname of IP address"
+msgid "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) in pattern matches any single character, a percent sign (%) matches any string of zero or more characters."
+msgstr "Geef een hostname of IP adres. SQL LIKE syntax wordt ondersteund: een underscore (_) in de zoekopdracht staat voor een enkel willekeurig teken, een procentteken (%) staat voor nul, een of meer willekeurige tekens."
 
 #: search.php:129
 msgid "Search"
