--- a/docs/i18n-template-php.pot
+++ b/docs/i18n-template-php.pot
@@ -874,3 +874,20 @@ msgstr ""
 #: index.php:213
 msgid "After you have removed the directory, you can login to <a href=\"index.php\">Poweradmin</a> with username \"admin\" and password \"admin\". You are highly encouraged to change these as soon as you are logged in."
 msgstr ""
+
+msgid "Invalid value for name field of SRV record."
+msgstr ""
+
+msgid "Invalid value for the weight field of the SRV record."
+msgstr ""
+
+msgid "Invalid value for the port field of the SRV record."
+msgstr ""
+
+msgid "Invalid SRV target."
+msgstr ""
+
+msgid "Invalid characters have been used in this record."
+msgstr ""
+
+
