Fixed the two URL's in the CHANGELOG and README file.

--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,4 +1,4 @@
 CHANGELOG
 
-Please see <https://code.krikkit.nl/trac/poweradmin/log/trunk>.
+Please see <https://www.poweradmin.org/trac/wiki/News/Poweradmin2.1.0Released>.
 
