--- a/docs/README
+++ b/docs/README
@@ -1,5 +1,4 @@
 
 
-See <https://code.krikkit.nl/trac/poweradmin/wiki/ReleaseNotes/2.0.0>.
-
+See <https://www.poweradmin.org/trac/wiki/ReleaseNotes/2.1.0>.
 
