TTN #371: allow editing of template name

--- a/locale/nl_NL/LC_MESSAGES/nl.po
+++ b/locale/nl_NL/LC_MESSAGES/nl.po
@@ -1089,3 +1089,7 @@ msgstr "Wijzigen zone template"
 msgid "Edit record in zone template"
 msgstr "Wijzigen record in zone template"
 
+#: inc/error.inc.php:65
+msgid "Zone template with this name already exists, please choose another one."
+msgstr "Zone template met deze naam bestaat al, kies een andere."
+
